# app/Http/Controllers/AuthController.php
@@ -1,36 +1,0 @@
-<?php
-
-namespace App\Http\Controllers;
-
-use Facade\FlareClient\Api;
-use Illuminate\Http\Request;
-
-class AuthController extends Controller
-{
-    public function login(Request $request)
-    {
-        $credentials = $request->only(['email', 'password']);
-
-        if (!$token = auth('api')->attempt($credentials)) {
-            return response()->json(['error' => 'Unauthorized'], 401);
-        }
-
-        return $this->respondWithToken($token);
-    }
-
-    /**
-     * Get the token array structure.
-     *
-     * @param  string $token
-     *
-     * @return \Illuminate\Http\JsonResponse
-     */
-    protected function respondWithToken($token)
-    {
-        return response()->json([
-            'access_token' => $token,
-            'token_type' => 'bearer',
-            'expires_in' => auth('api')->factory()->getTTL() * 60
-        ]);
-    }
-}
